data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1397.wast
;; 8. **Test: Conditional Branch to Loop with Empty Stack**:    - **Description**: Test `br_if` targeting a loop start with an empty operand stack.    - **Constraint Checked**: Validates that branching to a loop start requires the right number of operands on the stack.    - **Relation to Incorrect Branch Target Resolution**: Prevents incorrect loop entry due to stack underflows, ensuring correct iterative control flow.

(assert_invalid
  (module (func (loop $loop (br_if 0 (i32.eqz (i32.const 0))))))
  "type mismatch"
)